--- a/views/cast.erb
+++ b/views/cast.erb
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html>
-    <p>You cast: <%= Choices[@vote] %></p>
+    <p>You cast: <%= CHOICES[@vote] %></p>
     <p><a href='/results'>See the results!</a></p>
   </body>
 </html>
