--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,7 @@
     <p>What's for dinner?</p>
     <form action='cast' method='post'>
       <ul class='unstyled'>
-        <% Choices.each do |id, text| %>
+        <% CHOICES.each do |id, text| %>
           <li>
             <label class='radio'>
               <input type='radio' name='vote' value='<%= id %>' id='vote_<%= id %>' />
