--- a/views/results.erb
+++ b/views/results.erb
@@ -1,5 +1,5 @@
 <table class='table table-hover table-striped'>
-  <% Choices.each do |id, text| %>
+  <% CHOICES.each do |id, text| %>
     <tr>
       <th><%= text %></th>
       <td><%= @votes[id] || 0 %>
